--- a/Models/pom.xml
+++ b/Models/pom.xml
@@ -91,5 +91,12 @@
 			<version>5.9.1</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.14.0</version>
+		</dependency>
+
 	</dependencies>
 </project>
