--- a/CompetitionsRest/pom.xml
+++ b/CompetitionsRest/pom.xml
@@ -97,5 +97,11 @@
 			<artifactId>junit-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>es.iesjandula.statsbomb</groupId>
+            <artifactId>CompetitionsStats</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
