--- a/CompetitionsStats/pom.xml
+++ b/CompetitionsStats/pom.xml
@@ -97,5 +97,11 @@
 			<version>1.0.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>es.iesjandula.statsbomb</groupId>
+            <artifactId>Models</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
