--- a/Models/pom.xml
+++ b/Models/pom.xml
@@ -148,6 +148,12 @@
             <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.19.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 </project>
