--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -103,5 +103,18 @@
 			<version>2.14.1</version>
 			<scope>compile</scope>
 		</dependency>
+		
+		<!-- Log4j API -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.12.1</version>
+      </dependency>
+      <!-- Core Log4j -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.12.1</version>
+      </dependency>
 	</dependencies>
 </project>
