--- a/ThreeSixtyStats/pom.xml
+++ b/ThreeSixtyStats/pom.xml
@@ -30,7 +30,7 @@
 		<contributor>
 			<name>Manuel Martín</name>
 			<email>manuelmartinmurillo@gmail.com</email>
-			<url></url>
+			<url>https://github.com/manumartin0709</url>
 		</contributor>
 		<contributor>
 			<name>David Armijo Ramos</name>
@@ -40,7 +40,7 @@
 		<contributor>
 			<name>Jesús García Puerto</name>
 			<email>jesusgp888@gmail.com</email>
-			<url>https://github.com/Manueldlrc</url>
+			<url></url>
 		</contributor>
 		<contributor>
 			<name>Alejandro Aljarilla Castro</name>
@@ -57,8 +57,11 @@
 			<email>mdelarosacervera2000@gmail.com</email>
 			<url></url>
 		</contributor>
-
-
+		<contributor>
+			<name>Joaquín Moreno Sánchez</name>
+			<email>jomorenosanchez@gmail.com</email>
+			<url>https://github.com/jmorsan</url>
+		</contributor>
 
 	</contributors>
 
