--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -18,7 +18,7 @@
 			<url>https://github.com/nachoblwh</url>
 		</contributor>
 		<contributor>
-			<name>Jesús Guerrrero González</name>
+			<name>Jesús Guerrero González</name>
 			<email>jesusguerrerogonzalez2@gmail.com</email>
 			<url>https://github.com/jguegon966</url>
 		</contributor>
@@ -30,7 +30,7 @@
 		<contributor>
 			<name>Manuel Martín</name>
 			<email>manuelmartinmurillo@gmail.com</email>
-			<url></url>
+			<url>https://github.com/manumartin0709</url>
 		</contributor>
 		<contributor>
 			<name>David Armijo Ramos</name>
@@ -50,12 +50,17 @@
 		<contributor>
 			<name>Manuel Caño</name>
 			<email>mcangil786@g.educaand.es</email>
-			<url>https://github.com/manumartin0709</url>
+			<url></url>
 		</contributor>
 		<contributor>
 			<name>Manuel de la Rosa</name>
 			<email>mdelarosacervera2000@gmail.com</email>
 			<url>https://github.com/Manueldlrc</url>
+		</contributor>
+		<contributor>
+			<name>Joaquín Moreno Sánchez</name>
+			<email>jomorenosanchez@gmail.com</email>
+			<url>https://github.com/jmorsan</url>
 		</contributor>
 	</contributors>
 
