--- a/LineupsStats/pom.xml
+++ b/LineupsStats/pom.xml
@@ -30,7 +30,7 @@
 		<contributor>
 			<name>Manuel Martín</name>
 			<email>manuelmartinmurillo@gmail.com</email>
-			<url></url>
+			<url>https://github.com/manumartin0709</url>
 		</contributor>
 		<contributor>
 			<name>David Armijo Ramos</name>
@@ -56,6 +56,11 @@
 			<name>Manuel de la Rosa</name>
 			<email>mdelarosacervera2000@gmail.com</email>
 			<url>https://github.com/Manueldlrc</url>
+		</contributor>
+		<contributor>
+			<name>Joaquín Moreno Sánchez</name>
+			<email>jomorenosanchez@gmail.com</email>
+			<url>https://github.com/jmorsan</url>
 		</contributor>
 	</contributors>
 
