--- a/EventsStats/pom.xml
+++ b/EventsStats/pom.xml
@@ -141,5 +141,23 @@
 			<version>5.9.1</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>es.iesjandula.statsbomb</groupId>
+            <artifactId>Models</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>es.iesjandula.statsbomb</groupId>
+            <artifactId>Commons</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
+			<groupId>es.iesjandula.statsbomb</groupId>
+			<artifactId>Models</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 </project>
