--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -112,8 +112,9 @@
 			</plugin>
 
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>3.0.0-M7</version>
 				<executions>
 					<execution>
 						<id>default-test</id>
@@ -178,7 +179,7 @@
 		<dependency>
 			<groupId>org.jetbrains</groupId>
 			<artifactId>annotations-java5</artifactId>
-			<version>RELEASE</version>
+			<version>23.1.0</version>
 			<scope>compile</scope>
 		</dependency>
 
