--- a/LineupsRest/pom.xml
+++ b/LineupsRest/pom.xml
@@ -117,7 +117,9 @@
 			</plugin>
 
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M7</version>
 				<executions>
 					<execution>
 						<id>default-test</id>
@@ -147,5 +149,6 @@
 			<artifactId>junit-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 </project>
