--- a/ThreeSixtyRest/pom.xml
+++ b/ThreeSixtyRest/pom.xml
@@ -147,5 +147,11 @@
 			<artifactId>junit-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>es.iesjandula.statsbomb</groupId>
+            <artifactId>ThreeSixtyStats</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
