Creation a PossessionFilter in RestHandlerMatches, and modify of dependencies, add new attributes in Events.

--- a/MatchesRest/pom.xml
+++ b/MatchesRest/pom.xml
@@ -117,7 +117,9 @@
 			</plugin>
 
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M7</version>
 				<executions>
 					<execution>
 						<id>default-test</id>
@@ -147,5 +149,11 @@
 			<artifactId>junit-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>es.iesjandula.statsbomb</groupId>
+            <artifactId>MatchesStats</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
