--- a/ThreeSixtyRest/pom.xml
+++ b/ThreeSixtyRest/pom.xml
@@ -117,7 +117,9 @@
 			</plugin>
 
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M7</version>
 				<executions>
 					<execution>
 						<id>default-test</id>
