--- a/ThreeSixtyStats/pom.xml
+++ b/ThreeSixtyStats/pom.xml
@@ -143,5 +143,11 @@
 			<version>5.9.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>es.iesjandula.statsbomb</groupId>
+            <artifactId>Models</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 	</dependencies>
 </project>
