--- a/Models/pom.xml
+++ b/Models/pom.xml
@@ -62,6 +62,11 @@
 			<email>jomorenosanchez@gmail.com</email>
 			<url>https://github.com/jmorsan</url>
 		</contributor>
+		<contributor>
+			<name>Oscar Herruzo Montoya</name>
+			<email>thelinkmeshx@gmail.com</email>
+			<url>https://github.com/oscarherruzo</url>
+		</contributor>
 	</contributors>
 
 	<licenses>
