--- a/EventsRest/pom.xml
+++ b/EventsRest/pom.xml
@@ -154,5 +154,17 @@
 			<artifactId>junit-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>es.iesjandula.statsbomb</groupId>
+            <artifactId>Commons</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
+			<groupId>es.iesjandula.statsbomb</groupId>
+			<artifactId>EventsStats</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 </project>
