--- a/Models/pom.xml
+++ b/Models/pom.xml
@@ -165,6 +165,11 @@
             <version>2.19.0</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>3.0.1</version>
+		</dependency>
 
     </dependencies>
 </project>
