--- a/LineupsRest/src/main/resources/application.yaml
+++ b/LineupsRest/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 server:
-  port: 8084
+  port: 8083
 spring:
   jpa.hibernate.ddl-auto: create
   datasource:
-    url: jdbc:mysql://localhost:3306/matches
+    url: jdbc:mysql://localhost:3306/lineups
     username: root
     password: toor
     driver-class-name: com.mysql.cj.jdbc.Driver
