--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,43 @@ target/
 *.iml
 
 .idea/
+/ThreeSixtyStats/.classpath
+/ThreeSixtyStats/.project
+/ThreeSixtyStats/.settings/
+/ThreeSixtyRest/.project
+/ThreeSixtyRest/.classpath
+/ThreeSixtyRest/.settings/
+/Models/.project
+/Models/.classpath
+/Models/target/
+/Models/.settings/
+/MatchesStats/.project
+/MatchesStats/.classpath
+/MatchesStats/.settings/
+/MatchesRest/.project
+/MatchesRest/.classpath
+/MatchesRest/.settings/
+/LineupsStats/.project
+/LineupsStats/.classpath
+/LineupsStats/.settings/
+/LineupsRest/.project
+/LineupsRest/.classpath
+/LineupsRest/.settings/
+/EventsStats/.project
+/EventsStats/.classpath
+/EventsStats/target/
+/EventsStats/.settings/
+/EventsRest/.project
+/EventsRest/.classpath
+/EventsRest/target/
+/EventsRest/.settings/
+/CompetitionsStats/.project
+/CompetitionsStats/.classpath
+/CompetitionsStats/.settings/
+/CompetitionsRest/.project
+/CompetitionsRest/.classpath
+/CompetitionsRest/.settings/
+/Commons/.project
+/Commons/.classpath
+/Commons/target/
+/Commons/.settings/
