--- a/LineupsRest/pom.xml
+++ b/LineupsRest/pom.xml
@@ -162,6 +162,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>es.iesjandula.statsbomb</groupId>
+            <artifactId>Models</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 </project>
