--- a/ThreeSixtyRest/src/main/resources/application.yaml
+++ b/ThreeSixtyRest/src/main/resources/application.yaml
@@ -14,3 +14,7 @@ spring:
     pattern.console: '%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n'
     level.org.hibernate.SQL: debug
     level: debug
+
+statsbomb:
+  loadDatabase: true
+  competitionsUrl: http://localhost:8081
