--- a/CompetitionsRest/pom.xml
+++ b/CompetitionsRest/pom.xml
@@ -154,6 +154,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>3.0.2</version>
+		</dependency>
+		<dependency>
 			<groupId>es.iesjandula.statsbomb</groupId>
 			<artifactId>Models</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
