implements Eureka Server

--- a/CompetitionsRest/src/main/resources/application.yaml
+++ b/CompetitionsRest/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 server:
   port: 8081
 spring:
+  application:
+      name: competitions-rest
   jpa.hibernate.ddl-auto: create
   datasource:
     url: jdbc:mysql://localhost:3306/competitions
@@ -15,5 +17,14 @@ spring:
     level.org.hibernate.SQL: debug
     level: debug
 
+
 statsbomb:
   loadDatabase: false
+eureka:
+  client:
+    service-url:
+        defaultZone: http://localhost:8761/eureka/
+    instance:
+      prefer-ip-address: true
+      lease-renewal-interval-in-seconds: 10
+      lease-expiration-duration-in-seconds: 30
