--- a/CompetitionsRest/src/main/resources/application.yaml
+++ b/CompetitionsRest/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 server:
-  port: 8081
+  port: 0
 spring:
   application:
-      name: competitions-rest
+      name: competitions
   jpa.hibernate.ddl-auto: create
   datasource:
     url: jdbc:mysql://localhost:3306/competitions
