--- a/LineupsRest/src/main/resources/application.yaml
+++ b/LineupsRest/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8083
+  port: 0
 spring:
   jpa.hibernate.ddl-auto: create
   datasource:
@@ -17,3 +17,4 @@ spring:
 
 statsbomb:
   loadDatabase: true
+  competitionsUrl: http://localhost:8090
