--- a/MatchesRest/src/main/resources/application.yaml
+++ b/MatchesRest/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 server:
-  port: 8084
+  port: 0
 spring:
+  application:
+    name: matches
   jpa.hibernate.ddl-auto: create
   datasource:
     url: jdbc:mysql://localhost:3306/matches
@@ -14,6 +16,11 @@ spring:
     pattern.console: '%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n'
     level.org.hibernate.SQL: debug
     level: debug
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 
 statsbomb:
   loadDatabase: false
