--- a/ThreeSixtyRest/src/main/resources/application.yaml
+++ b/ThreeSixtyRest/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 server:
-  port: 8085
+  port: 0
 spring:
+  application:
+    name: three-sixty
   jpa.hibernate.ddl-auto: create
   datasource:
     url: jdbc:mysql://localhost:3306/three_sixty
@@ -15,6 +17,12 @@ spring:
     level.org.hibernate.SQL: debug
     level: debug
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
+
 statsbomb:
   loadDatabase: true
-  competitionsUrl: http://localhost:8081
+  competitionsUrl: http://localhost:8090
