--- a/MatchesRest/src/main/resources/application.yaml
+++ b/MatchesRest/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 spring:
   application:
     name: matches
-  jpa.hibernate.ddl-auto: create
+  jpa.hibernate.ddl-auto: none
   datasource:
     url: jdbc:mysql://localhost:3306/matches
     username: root
@@ -23,5 +23,5 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 
 statsbomb:
-  loadDatabase: true
+  loadDatabase: false
   competitionsUrl: http://localhost:8090
