--- a/CompetitionsRest/src/main/resources/application.yaml
+++ b/CompetitionsRest/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/competitions
     username: root
-    password: root
+    password: toor
     driver-class-name: com.mysql.cj.jdbc.Driver
   hikari:
     connection-timeout: 60000
