--- a/MatchesRest/src/main/resources/application.yaml
+++ b/MatchesRest/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 spring:
   application:
     name: matches
-  jpa.hibernate.ddl-auto: none
+  jpa.hibernate.ddl-auto: create
   datasource:
     url: jdbc:mysql://localhost:3306/matches
     username: root
