--- a/CompetitionsRest/src/main/resources/application.yaml
+++ b/CompetitionsRest/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 spring:
   application:
     name: competitions
-  jpa.hibernate.ddl-auto: create
+  jpa.hibernate.ddl-auto: none
   datasource:
     url: jdbc:mysql://localhost:3306/competitions
     username: root
@@ -23,4 +23,4 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 
 statsbomb:
-  loadDatabase: true
+  loadDatabase: false
